<resources>
    <string name="app_name">Incarnate Word</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>Sri Aurobindo</item>
        <item>About</item>
        <item>Birth Centenary Library</item>
        <item>Complete Works</item>
        <item>The Mother</item>
        <item>About</item>
        <item>Collected Works</item>
        <item>Agenda</item>
        <item>Dictionary</item>
        <item>Entries</item>

    </string-array>
    <string name="title_messages">Incarnate Word</string>
    <string name="Sri_Aurobindo">Sri Aurobindo</string>
    <string name="birth_cent_lib">Sri Aurobindo Birth Centenary Library</string>
    <string name="complete_work">The Complete Works of Sri Aurobindo</string>
    <string name="the_mother">The Mother</string>
    <string name="about">About</string>
    <string name="collection_work">The Collected Works of the Mother</string>
    <string name="agenda">Mother\'s Agenda</string>
    <string name="dictionary">Dictionary</string>
    <string name="search">Search</string>
    <string name="introHeading">The Incarnate Word</string>
    <string name="introHeadingSub">O living power of the incarnate Word, All that the Spirit has dreamed thou canst create: Thou art the force by which I made the worlds,Thou art my vision and my will and voice.</string>
    <string name="IntroFirstStanza">If one reads Sri Aurobindo carefully one finds the answers to all that one wants to know. </string>
    <string name="IntroFirstStWriter">- The Mother, CWM</string>
    <string name="IntroSecStan">It is not by books that Sri Aurobindo ought to be studied but by subjects — what he has said on the Divine, on Unity, on religion, on evolution, on education, on self-perfection, on supermind, etc., etc.</string>
    <string name="IntroThirdStanza">If you want to know what Sri Aurobindo has said on a given subject, you must at least read all that he has written on that subject. You will then see that he has apparently said the most contradictory things. But when one has read everything, and understood a little, one perceives that all the contradictions complement each other and are organised and unified into an integral synthesis.</string>
    <string name="about_aurbi">What Sri Aurobindo represents in the world’s history is not a teaching, not even a revelation; it is a decisive action direct from the Supreme.\n\nSri Aurobindo has come on earth not to bring a teaching or a creed in competition with previous creeds or teachings, but to show the way to overpass the past and to open concretely the route towards an imminent and inevitable future.\n\nSri Aurobindo came upon earth to teach this truth to men. He told them that man is only a transitional being living in a mental consciousness, but with the possibility of acquiring a new consciousness, the Truth-consciousness, and capable of living a life perfectly harmonious, good and beautiful, happy and fully conscious. During the whole of his life upon earth, Sri Aurobindo gave all his time to establish in himself this consciousness he called supramental, and to help those gathered around him to realise it.</string>
    <string name="about_mother">There is one divine Force which acts in the universe and in the individual and is also beyond the individual and the universe. The Mother stands for all these, but she is working here in the body to bring down something not yet expressed in this material world so as to transform life here — it is so that you should regard her as the Divine Shakti working here for that purpose. She is that in the body, but in her whole consciousness she is also identified with all the other aspects of the Divine.\n\nYou have only to aspire, to keep yourself open to the Mother, to reject all that is contrary to her will and to let her work in you — doing also all your work for her and in the faith that it is through her force that you can do it. If you remain open in this way, the knowledge and realisation will come to you in due course.\n\nThe Mother had been spiritually conscious from her youth, even from her childhood upward and she had done Sadhana and had developed this knowledge very long before she came to India.</string>
    <string name="next"> Next &#160;»</string>
    <string name="Prev">«&#160; Previous </string>
</resources>