<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/card_view2"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="#ffffff">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RelativeLayout
                android:id="@+id/card_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#e0e0e0"
                android:layout_marginTop="@dimen/abc_action_bar_default_height_material"
                android:layout_gravity="center"
                >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:padding="10dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentTop="true"
                        android:gravity="center"
                        android:text="@string/introHeading"
                        android:textColor="@color/headingColor"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2h"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView"
                        android:layout_marginLeft="10dp"
                        android:paddingBottom="10dp"
                        android:layout_marginRight="05dp"
                        android:layout_marginTop="4dp"
                        android:textSize="18sp"
                        android:lineSpacingExtra="1dp"
                        android:gravity="center"
                        android:text="@string/introHeadingSub"
                        android:textColor="@color/newTxtColor" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:padding="10dp"
                android:layout_below="@+id/card_view"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="05dp"
                    android:layout_marginTop="05dp"
                    android:textSize="18sp"
                    android:lineSpacingExtra="1dp"
                    android:gravity="center|start"
                    android:text="@string/IntroFirstStanza"
                    android:textColor="@color/newTxtColor" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textView4"
                    android:layout_margin="05dp"
                    android:layout_marginLeft="05dp"
                    android:layout_marginRight="05dp"
                    android:layout_marginTop="04dp"
                    android:background="#EAEAEA"></View>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/textView2"
                    android:layout_marginRight="04dp"
                    android:layout_marginTop="03dp"
                    android:text="@string/IntroFirstStWriter"
                    android:textColor="@color/SubTitleColor" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="05dp"
                    android:textSize="18sp"
                    android:lineSpacingExtra="1dp"
                    android:layout_marginRight="05dp"
                    android:gravity="center|start"
                    android:text="@string/IntroSecStan"
                    android:textColor="@color/newTxtColor"
                    android:layout_below="@+id/view"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView4"
                    android:layout_below="@+id/textView7"
                    android:layout_marginRight="04dp"
                    android:layout_marginTop="03dp"
                    android:text="@string/IntroFirstStWriter"
                    android:textColor="@color/SubTitleColor" />


                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_alignStart="@+id/view"
                    android:layout_below="@+id/textView8"
                    android:layout_marginLeft="05dp"
                    android:layout_marginRight="05dp"
                    android:layout_marginTop="04dp"
                    android:background="#EAEAEA"></View>

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="05dp"
                    android:layout_marginRight="05dp"
                    android:textSize="18sp"
                    android:lineSpacingExtra="1dp"
                    android:gravity="center|start"
                    android:text="@string/IntroThirdStanza"
                    android:textColor="@color/newTxtColor"
                    android:layout_below="@+id/view1"
                    android:layout_alignParentStart="true" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/textView10"
                    android:layout_below="@+id/textView10"
                    android:layout_marginRight="04dp"
                    android:layout_marginTop="03dp"
                    android:layout_marginBottom="05dp"
                    android:text="@string/IntroFirstStWriter"
                    android:textColor="@color/SubTitleColor" />
            </RelativeLayout>
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</RelativeLayout>
