<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbackcolor">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <RelativeLayout
            android:id="@+id/outer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flexible_space_image_height"
            android:background="@drawable/examplee">

            <RelativeLayout
                android:layout_width="377dp"
                android:id="@+id/viewtoscrooll"
                android:background="@drawable/example"
                android:layout_centerHorizontal="true"
                android:layout_height="240dp">

                <TextView
                    android:id="@+id/txtvol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:contentDescription="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:gravity="center"
                    android:layout_above="@+id/txtvolname"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtvolname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:text=""
                    android:visibility="gone"
                    android:paddingBottom="01dp"
                    android:paddingTop="01dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:layout_above="@+id/txtvoldetial"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/txtvoldetial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="05dp"
                    android:layout_marginRight="05dp"
                    android:contentDescription="@string/app_name"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </RelativeLayout>
        <View
            android:id="@+id/list_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white" />
        <com.github.ksoichiro.android.observablescrollview.ObservableListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:scrollingCache="false"
            android:animationCache="false"
            android:paddingBottom="100dp"
            android:clipToPadding="false"
            />

        <FrameLayout
            android:id="@+id/NxtPrv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/ll_action_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#66000000"
                android:divider="@drawable/ic_img_line_v"
                android:dividerPadding="16dp"
                android:showDividers="middle">
                <TextView
                    android:id="@+id/btnprev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/Prev"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/btnnext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/next"
                    android:textColor="#ffffff"
                    android:textSize="18sp" />
            </LinearLayout>
        </FrameLayout>
        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center" />


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </RelativeLayout>

</RelativeLayout>
